// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/index adds changelogUrl 1`] = `
Object {
  "changelogUrl": Any<String>,
  "releases": Array [
    Object {
      "version": "1.0.0",
    },
  ],
  "sourceUrl": "https://github.com/react-native-community/react-native-releases",
}
`;

exports[`datasource/index adds sourceUrl 1`] = `
Object {
  "releases": Array [
    Object {
      "version": "1.0.0",
    },
  ],
  "sourceUrl": Any<String>,
}
`;
